-
Bug
-
Resolution: Done
-
P4: Low
-
5.3.0 Beta1
-
None
-
0a0cc6afc8be1ab38367ad803a303f35f29ed5de
QTemporaryDir::QTemporaryDir(const QString & templateName)
templateName is quite misleading because you can easily expect that the system temporary directory is prepended as default. But in that case it is
creating a temporary file in the working directory. The documentation says it but not very clearly. Better would be in my opinion to call it templatePath.
| For Gerrit Dashboard: QTBUG-38266 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 83247,2 | Doc: change the name of the QTemporaryDir parameter name | stable | qt/qtbase | Status: MERGED | +2 | 0 |