Doc: change the name of the QTemporaryDir parameter name

Make it very clear that this is a path, so it's relative to the working
dir, not relative to tempPath().

Task-number: QTBUG-38266
Change-Id: Ib7ca8df76b5a03c1631fe00d6b329d86538d4b5a
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>